<resources>
    <string name="app_name">Movies &amp; TV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_amp_tv"><![CDATA[Movies & TV]]></string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="pushpa">Pushpa</string>
    <string name="this_is_a_test_movie_name_of_two_lines">This is a test movie name of two lines</string>
    <string name="developed_by_manish">Developed by Manish</string>
    <string name="very_slow_or_no_internet_available_please_check_your_internet_connection">Very Slow or no Internet Available. Please Check your Internet Connection</string>
    <string name="try_again">Try Again</string>
</resources>